# candle-llava

./: .gitignore  Cargo.toml  LICENSE  README.md
candle-nonzero/: Cargo.toml
candle-nonzero/benches/: nonzero.rs
candle-nonzero/src/: ffi.rs  lib.rs  nonzero.cu
llava/: Cargo.toml
llava-kernels/: Cargo.toml  build.rs
llava-kernels/src/: cuda.cu  ffi.rs  lib.rs  nonzero.cu
llava/src/: clip_image_processor.rs  conversation.rs  llama.rs  main.rs  ops.rs
src/: clip.rs  clip_image_processor.rs  config.rs  constants.rs  conversation.rs  llama.rs  main.rs  model.rs  multi_images.rs  single_image.rs  utils.rs
tokenizer/: tokenizer_config.json
