[package]
name = "candle-llava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokenizers = { version = "0.19.1", features = ["http"] }
regex = "1.10.4"
image = "0.25.1"
tracing = "0.1.40"

