[workspace]
members = ["llava", "candle-nonzero"]

resolver = "2"

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokenizers = { version = "0.19.1", features = ["http"] }
regex = "1.10.4"
image = "0.25.1"
tracing = "0.1.40"
half = "2.4.1"
candle-nonzero = {path = "candle-nonzero"}
cudarc = "0.11.4"
rayon = "1.10"