[package]
name = "candle-nonzero"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { workspace = true }
candle-core = { workspace = true}
half = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
bindgen_cuda = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "nonzero"
harness = false
