[package]
name = "llava"
version = "0.1.0"
edition = "2021"


[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-examples = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
regex = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
candle-nonzero = { workspace = true }
half = { workspace = true }